--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3": "5.16.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
+    "http-proxy-middleware": "^2.0.6",
     "next": "13.2.4",
     "ol": "^7.3.0",
     "ol-ext": "^4.0.6",
